--- a/catwalk/css/index.css
+++ b/catwalk/css/index.css
@@ -42,3 +42,26 @@ nav a {
 nav a:hover {
     background-color: #555;
 }
+.hero-gallery {
+    width: 90%;
+    padding: 20px;
+    margin: 100px auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+.gallery {
+    width: 250px;
+    margin: 0;
+    transition: 1s;
+
+}
+.gallery img {
+    display: block;
+    width: 100%;
+}
+.gallery:hover {
+    transform: scale(1.3);
+    z-index: 2;
+
+}
