--- a/catwalk/css/index.css
+++ b/catwalk/css/index.css
@@ -65,3 +65,62 @@ nav a:hover {
     z-index: 2;
 
 }
+footer {
+    
+    width: 100%;
+    background-color:rgb(20, 19, 19);;
+    padding: 30px 0;
+    flex-direction: column;
+}
+.social-media {
+    display: flex;
+    text-align: center;
+    padding-bottom: 0;
+    color: rgb(247, 239, 239);
+    justify-content: center;
+    list-style: none;
+
+}
+
+.social-media a {
+    font-size: 16px;
+    color: inherit;
+    width: 140px;
+    height: 40px;
+    line-height: 30px;
+    display: inline-block;
+    text-align: center;
+    opacity: .7;
+    
+}
+
+.social-media:hover {
+    transition: .3s;
+    color: rgb(247, 239, 239);
+    transition: 1s;
+    
+}
+#twitter:hover {
+    transition: .3s;
+    color:#00acee;
+    transition: .3s;
+}
+#youtube:hover {
+    transition: .3s;
+    color:#FF0000;
+    transition: .3s;
+}
+#instagram:hover {
+    transition: .3s;
+    color:#FCAF45;
+    transition: .3s;
+}
+#facebook:hover{
+    transition: .3s;
+    color: 	#4267B2;
+    transition: .3s;
+}
+.menu-bar-footer {
+    justify-content: center;
+    padding-top: 10px;
+}
