--- a/catwalk/css/index.css
+++ b/catwalk/css/index.css
@@ -36,11 +36,26 @@ nav a {
     color: rgb(121, 118, 118);
     display: block;
     padding:18px ;
-    
-
 }
 nav a:hover {
     background-color: #555;
+}
+#cover-text {
+    font-family: inherit;
+    font-size: 2em;
+    color: rgb(98, 93, 93);
+    text-align: center;
+    animation-name: hero-zoom;
+    animation-duration: 5s;
+    animation-fill-mode: forwards;
+}
+@keyframes hero-zoom {
+from {
+transform: scale(1);
+}
+to {
+transform: scale(1.1);
+}
 }
 .hero-gallery {
     width: 90%;
@@ -200,3 +215,4 @@ ul,li{
       z-index:2;
       
     }
+}
