--- a/catwalk/css/index.css
+++ b/catwalk/css/index.css
@@ -41,6 +41,7 @@ nav a:hover {
     background-color: #555;
 }
 #cover-text {
+    height: 0px;
     font-family: inherit;
     font-size: 2em;
     color: rgb(98, 93, 93);
