--- a/catwalk/css/index.css
+++ b/catwalk/css/index.css
@@ -74,6 +74,7 @@ transform: scale(1.1);
 }
 .gallery img {
     display: block;
+    height: 30vh;
     width: 100%;
 }
 .gallery:hover {
@@ -84,7 +85,7 @@ transform: scale(1.1);
 footer {
     
     width: 100%;
-    background-color:rgb(20, 19, 19);;
+    background-color: whitesmoke;
     padding: 30px 0;
     flex-direction: column;
 }
@@ -92,7 +93,7 @@ footer {
     display: flex;
     text-align: center;
     padding-bottom: 0;
-    color: rgb(247, 239, 239);
+    color: rgb(23, 21, 21);
     justify-content: center;
     list-style: none;
 
@@ -112,7 +113,7 @@ footer {
 
 .social-media:hover {
     transition: .3s;
-    color: rgb(247, 239, 239);
+    color: rgb(136, 133, 133);
     transition: 1s;
     
 }
