--- a/catwalk/css/index.css
+++ b/catwalk/css/index.css
@@ -82,6 +82,15 @@ transform: scale(1.1);
     z-index: 2;
 
 }
+.video {
+
+    width: 90%;
+    padding: 20px;
+    margin: 100px auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
 footer {
     
     width: 100%;
