--- a/catwalk/css/index.css
+++ b/catwalk/css/index.css
@@ -128,10 +128,24 @@ p {
     flex-direction: row;
     justify-content: center;
 }
+.img-galley {
+    width: 80%;
+    margin: 100px auto 50px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-gap: 30px;
+}
+.img-galley img {
+    width: 100%;
+    cursor: pointer;
+}
+
+/*
 .gallery {
     width: 250px;
     margin: 0;
     transition: 1s;
+    display: block;
 
 }
 .gallery img {
@@ -143,7 +157,7 @@ p {
     z-index: 2;
 
 }
-/*
+
 .gallery {
     width: 250px;
     margin: 0;
@@ -180,7 +194,7 @@ p {
     font-size: 2em;
 }
 .about-image {
-    background-image: url(../css/images/woman-in-bodysuit.jpeg);
+    background-image: url(../css/images/two-models.jpg);
     height: 68vh;
     width: 100%;
     background-repeat: no-repeat;
@@ -596,6 +610,17 @@ footer {
 }
 .form-image {
     height: 68vh;
+}
+.img-galley {
+    width: 80%;
+    margin: 100px auto 50px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-gap: 30px;
+}
+.img-galley img {
+    width: 100%;
+    cursor: pointer;
 }
 }
 }
