--- a/catwalk/css/index.css
+++ b/catwalk/css/index.css
@@ -4,6 +4,8 @@
     padding: 0%;
     margin: 0%;
     box-sizing: border-box;
+    font-family: 'oswals' sans-serif;
+    
 }
 
 body .wrapper {
@@ -138,8 +140,18 @@ p {
 .img-galley img {
     width: 100%;
     cursor: pointer;
+    display: block;
 }
-
+.img-galley img:hover {
+    transform: scale(1.3);
+    z-index: 2;
+    transition: 1.5s;
+}
+.img-desc {
+    color: rgb(121, 118, 118);
+    font-size: 25px;
+   text-align: center;
+}
 /*
 .gallery {
     width: 250px;
@@ -187,12 +199,7 @@ p {
     justify-content: center;
 }
 */
-.desc {
 
-    font-family: inherit;
-    border-bottom: 1px solid #3a3a3a;
-    font-size: 2em;
-}
 .about-image {
     background-image: url(../css/images/two-models.jpg);
     height: 68vh;
@@ -611,16 +618,6 @@ footer {
 .form-image {
     height: 68vh;
 }
-.img-galley {
-    width: 80%;
-    margin: 100px auto 50px;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    grid-gap: 30px;
-}
-.img-galley img {
-    width: 100%;
-    cursor: pointer;
-}
+
 }
 }
